--- a/index.html
+++ b/index.html
@@ -6,12 +6,12 @@
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
-<link href="https://fonts.googleapis.com/css?family=Bubbler+One" rel="stylesheet">
-<link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.css">
-<link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/skeleton/2.0.4/skeleton.css">
-<link rel="stylesheet" type="text/css" href="api-interaction.css">
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
-<script src="api-interaction.js"></script>
+  <link href="https://fonts.googleapis.com/css?family=Bubbler+One" rel="stylesheet">
+  <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.css">
+  <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/skeleton/2.0.4/skeleton.css">
+  <link rel="stylesheet" type="text/css" href="api-interaction.css">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
+  <script src="api-interaction.js"></script>
 
 </head>
 
@@ -20,17 +20,16 @@
   <div class="container">
     <div class = "row">
       <h3><strong>random <span class="letter_color">M</span>aori proverb<strong></h3>
-      <div>
-            <h5>the Source is: </h5>
-            <p class="proverb-source"></p>
-            <h5>the translation :</h5>
-            <p class="proverb-translation"></p>
-
+        <div>
+          <p class="proverb-source">Maori proverb </p>
+          <p class="proverb-translation">Translation</p>
+          <div class="buttonActions">
+            <input type="button" onclick="getProverb()" value="new proverb" class="newProverb"> </input>
+          </div>
         </div>
-    <button class=button>new proverb</button>
-  </div>
-</div>
+      </div>
+    </div>
 
 
-</body>
-</html>
+  </body>
+  </html>
